# afl-scraper

./: README.md  __main__.py  alembic.ini  cssselectors.py  main.py  pyproject.toml  scraper.py
afl_scraper/: __init__.py  __main__.py  cli.py  cssselectors.py
afl_scraper/models/: __init__.py  match_details.py
afl_scraper/parser/: README.md  __init__.py  css_selectors.py  match.py
afl_scraper/pipelines/: README.md  __init__.py  match.py
afl_scraper/scraper/: README.md  __init__.py  browser.py  css_selectors.py  fixture.py  paths.py  scrape.py  season_ids.py
afl_scraper/scraper/constants/: __init__.py  css_selectors_fixture.py
afl_scraper/scraper/parser/: README.md  match.py
afl_scraper/storage/: README.md  bootstrap.sql  teardown.sql
afl_scraper/storage/migrations/: env.py
afl_scraper/storage/migrations/versions/: c6230ed6782e_create_player_table.py
afl_scraper/storage/tables/: match.sql  player.sql  roundstats.sql
afl_scraper/transform/: __init__.py
afl_scraper/transform/constants/: __init__.py  team_mappings.py
afl_scraper/transformer/: teams.py
afl_scraper/utils/: __init__.py  health.py  smoke_test.py
parser/: match.py
scraper/: README.md  __init__.py  css_selectors.py  fixture.py  paths.py  scrape.py  season_ids.py
tests/: test_transform_teams.py
utils/: __init__.py  health.py  smoke_test.py
