[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afl-scraper"
version = "0.1.0"
description = "Data scraper for AFL matches and player statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pandas>=2.3.3",
    "playwright>=1.52.0",
]

[project.scripts]
afl-scraper = "afl_scraper.__main__:cli"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
